--- a/src/components/Body1/Body1.css
+++ b/src/components/Body1/Body1.css
@@ -119,12 +119,13 @@
 .image-section {
     flex: 1;
     max-width: 500px;
-    margin-left: 65px;
     border: none;
     display: inline-block;
     vertical-align: middle;
     box-sizing: border-box;
+    margin-bottom: 95px;
     margin-right: 120px;
+    margin-left: 65px;
     padding: 10px;
     border-style: solid;
     border-width: 0px 0px 3px 0px;
@@ -137,17 +138,98 @@
 }
 
 
-@media(min-width: 1517px){
-    .image-section{
-        margin-right: 450px;
+@media(min-width: 1517px){ /*90*/
+   .body1 {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 120px 8%;
+        height: 88vh;
+        gap: 40px;
     }
-    .text-section{
-        margin-left: 350px;
+    
+    .text-section {
+        max-width: 550px;
         font-family: "Open Sans", sans-serif;
+        margin-right: -350px;
+        margin-left: -5px;
+    }
+
+    .text-section h6{
+        margin-right: 45px;
+        font-family: Roboto, sans-serif;
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 23.8px;
+        color: rgb(236, 28, 36);
+    }
+
+    .text-section p {
+        width: 38vw;
+        font-family: "Open Sans", sans-serif;
+        font-size: 17px;
+        font-weight: 400;
+        line-height: 28.9px;
+        color: rgb(75, 79, 88);
+    }
+
+    .image-section {
+        max-width: 560px;
+        margin-right: 80px;
+        height: auto;
     }
 }
 
-@media (min-width: 1821px) {
+
+@media (min-width: 1707px) { /*80*/
+    .body1 {
+        display: flex;
+        justify-content: center;
+        gap: 50px; 
+        padding: 120px 10%;
+        height: 73vh;
+    }
+
+    .text-section {
+        flex: none;
+        max-width: 600px;
+        margin-left: -170px;
+        margin-right: -60px;
+    }
+
+    .text-section h6{
+        text-align: left;
+        padding-left: 10px;
+    }
+
+    .text-section h1{
+        font-family: Roboto, sans-serif;
+        font-size: 57px;
+        font-weight: 700;
+        line-height: 62.7px;
+        color: rgb(2, 13, 57);
+        width: 550px
+    }
+
+    .text-section p{
+        width: 34vw;
+        font-family: "Open Sans", sans-serif;
+        font-size: 17px;
+        font-weight: 400;
+        line-height: 28.9px;
+        color: rgb(75, 79, 88);
+    }
+
+    .image-section {
+        flex: none;
+        max-width: 500px;
+        height: auto;
+        margin-right: -95px;
+    }
+}
+
+
+@media (min-width: 1821px) {/*75*/
     .body1 {
         display: flex;
         justify-content: center;
@@ -160,11 +242,71 @@
     .text-section {
         flex: none;
         width: 600px;
-        margin-left: -110px;
+        margin-left: -90px;
     }
 
     .text-section h6{
         padding-right: 170px;
+        font-family: Roboto, sans-serif;
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 23.8px;
+        color: rgb(236, 28, 36);
+    }
+
+    .text-section h1 {
+        width: 100%;
+        max-width: 31vw;
+        font-family: Roboto, sans-serif;
+        font-size: 57px;
+        font-weight: 700;
+        line-height: 62.7px;
+        color: rgb(2, 13, 57);
+    }
+
+    .text-section p{
+        font-family: "Open Sans", sans-serif;
+        font-size: 17px;
+        font-weight: 400;
+        line-height: 28.9px;
+        color: rgb(75, 79, 88);
+        width: 30vw;
+        text-align: left;
+    }
+
+    .image-section {
+        flex: none;
+        max-width: 560px;
+        height: auto;
+        margin-right: -30px;
+        margin-bottom: 120px;
+        margin-left: 10px;
+        border-radius: 40px 10px 100px 10px; 
+        display: block; 
+        width: 100%;
+        padding-bottom: 0; 
+
+    }
+    
+}
+
+@media (min-width: 2049px) {/*67*/
+    .body1 {
+        padding: 120px 12%;
+        max-width: 100%;
+        height: 75vh;
+    }
+
+    .text-section {
+        max-width: 700px;
+    }
+
+    .text-section h6{
+        font-family: Roboto, sans-serif;
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 23.8px;
+        color: rgb(236, 28, 36);
     }
 
     .text-section h1 {
@@ -173,41 +315,22 @@
         font-weight: 700;
         line-height: 62.7px;
         color: rgb(2, 13, 57);
-        width: 550px
+        width: 26vw;
     }
 
-    .text-section p{
+    .text-section p {
         font-family: "Open Sans", sans-serif;
         font-size: 17px;
         font-weight: 400;
-        line-height: 35px;
+        line-height: 28.9px;
         color: rgb(75, 79, 88);
-        width: 30.1vw;
-        text-align: left;
+        width: 27vw;
     }
 
     .image-section {
-        flex: none;
-        width: 600px;
+        width: 510px;
         height: auto;
-        margin-right: -30px;
-        margin-left: -30px;
-        border-radius: 40px 10px 100px 10px; 
-        display: block; 
-        width: 100%;
-        padding-bottom: 0; 
-        margin-bottom: -4px;
-
+        margin-left: 20px;
+        border-radius: 50px 10px 120px 10px;
     }
-    .image-section::after {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%; 
-        height: 5px; 
-        background-color: #EC1C24;
-        transform: translateX(-50%); 
-    }
-    
 }
