--- a/src/components/CertificationSection/CertificationSection.css
+++ b/src/components/CertificationSection/CertificationSection.css
@@ -6,7 +6,6 @@
     display: flex;
     align-items: center;
     padding: 40px 20px;
-    border-radius: 8px;
     position: relative;
     width: 80%;
     height: 120px;
@@ -25,7 +24,6 @@
     width: 100%;
     height: 100%;
     background-color: rgba(49, 66, 136, 0.9);
-    border-radius: 8px;
     z-index: 0; 
 }
 
@@ -100,38 +98,87 @@
     background-color: #000;
 }
 
-@media (min-width: 1367px) {
+@media (min-width: 1517px) {  /* 90% */
     .certification {
-        width: 55vw;
-        margin-left: 410px;
-    }
-}
-
-@media (min-width: 1517px) {
-    .certification {
-        width: 52vw;
-        margin-left: 420px;
+        width: 72vw;
+        margin-left: auto;
+        margin-right: auto;
         padding: 50px 30px;
-        height: 140px;
+        height: auto;
+    }
+    .certification-text{
+        padding-left: 30px;
     }
     .certification-text h3 {
-        font-size: 26px;
+        font-family: 'Roboto', sans-serif;
+        font-size: 25px;
+        font-weight: 700;
+        line-height: 35px;
+        color: rgb(255, 255, 255);
     }
     .certification-text p {
-        font-size: 18px;
+        font-family: "Open Sans", sans-serif;
+        font-size: 17px;
+        font-weight: 400;
+        line-height: 28.9px;
+        color: rgb(255, 255, 255);
     }
     .button1 {
-        padding: 10px 40px;
+        padding: 14px 45px;
         font-size: 17px;
+        font-family: "Open Sans", sans-serif;
+        font-size: 15px;
+        font-weight: 500;
+        line-height: 15px;
+        color: rgb(255, 255, 255);
+    }
+} 
+
+@media (min-width: 1707px) { /* 80% */
+    .certification {
+        width: 65vw; 
+        margin-left: auto;
+        margin-right: auto;
+        padding: 50px 20px;
+        height: 12vh;
+    }
+    .certification-text {
+        width: 100%;
+        padding-left: 50px;
+    }
+    .certification-text h3 {
+        font-family: Roboto, sans-serif;
+        font-size: 25px;
+        font-weight: 700;
+        line-height: 35px;
+        color: rgb(255, 255, 255);
+    }
+    .certification-text p {
+        font-family: "Open Sans", sans-serif;
+        font-size: 17px;
+        font-weight: 400;
+        line-height: 28.9px;
+        color: rgb(255, 255, 255);
+    }
+    .cert-img {
+        margin-left: 10px;
+    }
+    .button1 {
+        width: 200px;
+        height: 55px;
+        font-size: 18px;
+        text-align: center;
+        margin-top: 30px;
+        margin-left: -30px;
     }
 }
 
-@media (min-width: 1821px) {
+@media (min-width: 1821px) {  /* 75% */
     .certification {
         width: 58vw;
-        margin-left: 320px;
+        margin-left: auto;
         padding: 60px 40px;
-        height: 95px;
+        height: 10vh;
     }
     .certification-text h3 {
         font-size: 28px;
@@ -140,8 +187,47 @@
         font-size: 17px;
         line-height: 1.6;
     }
+    .cert-img{
+        margin-left: -25px;
+    }
     .button1 {
         width: auto;
-        padding: 12px 50px;
+        padding: 15px 50px;
     }
 }
+
+@media (min-width: 2049px) {  /* 67% */
+    .certification {
+        width: 51vw;
+        margin: 0 auto;
+        padding: 60px 50px;
+        height: 70px;
+    }
+    .certification-text{
+        padding-left: 35px;
+    }
+    .certification-text h3 {
+        font-family: 'Roboto', sans-serif;
+        font-size: 25px;
+        font-weight: 700;
+        line-height: 35px;
+        color: rgb(255, 255, 255);
+    }
+    .certification-text p{
+        font-family: "Open Sans", sans-serif;
+        font-size: 17px;
+        font-weight: 400;
+        line-height: 28.9px;
+        color: rgb(255, 255, 255);
+    }
+    .cert-img{
+        margin-left: -35px;
+    }
+    .button1 {
+        width: auto;
+        height: auto;
+        padding: 16px 55px;
+        font-size: 18px;
+    }
+}
+
