--- a/src/components/IndSection/IndSection.css
+++ b/src/components/IndSection/IndSection.css
@@ -5,15 +5,7 @@
     margin-bottom: 40px;
 }
 
-.ind-images {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 20px;
-    padding: 20px;
-    padding-left: 70px;
-}
+
 
 .text h2{
     font-size: 40px;
@@ -33,42 +25,56 @@
     color: rgb(75, 79, 88);
 }
 
-.ind-images .img1, .ind-images .img2, .ind-images .img3, 
-.ind-images .img4, .ind-images .img5, .ind-images .img6, 
-.ind-images .img7, .ind-images .img8, .ind-images .img9, 
-.ind-images .img10 {
+.ind-images {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 10px;
+    padding-left: 5px;
+    width: 80vw;
+}
+
+.ind-images div{
     align-items: center;
-    max-width: calc(100% - 50px);
+    max-width: calc(100% - 900px);
     width: 100%;
     height: 200px;
     background-color: white;
     box-shadow: 0 12px 30px rgba(0, 0, 0, 0.1);
     border-radius: 15px;
-    max-width: 170px;
 }
 
 .ind-images img {
-    height: 80px;
+    height: 60px;
     object-fit: cover;
     border-radius: 8px;
+    padding-top: 20px;
+    width: auto;
 }
 
+
 .ind-images p {
-    margin-top: 10px;
+    margin-top: 30px;
     text-align: center;
     font-size: 17px;
     font-family: 'Open Sans', sans-serif;
     color: #4B4F58;
+    padding-left: 10px;
+    font-weight: 600;
+    line-height: 28.9px;
+    color: rgb(75, 79, 88);
 }
 
-@media (min-width: 1367px) {
-    .text{
-        margin-left: 300px;
-        margin-right: 350px;
+
+@media (min-width: 1517px) { /* 90% */
+    .text {
+        margin-left: 62px;
+        margin-right: auto;
+        max-width: 65vw;
+        text-align: left;
     }
+
     .text h2{
         font-family: Roboto, sans-serif;
         font-size: 40px;
@@ -76,6 +82,7 @@
         line-height: 40px;
         color: rgb(2, 15, 66);
     }
+
     .text p{
         font-family: "Open Sans", sans-serif;
         font-size: 17px;
@@ -83,80 +90,161 @@
         line-height: 28.9px;
         color: rgb(75, 79, 88);
     }
+
     .ind-images {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center; 
-        align-items: center;
-        gap: 20px;
-        margin: 0 auto;
-        width: 80%;
+        width: 76vw;
+        margin-left: 60px;
     }
-    .ind-images .img1, .ind-images .img2, .ind-images .img3, 
-    .ind-images .img4, .ind-images .img5, .ind-images .img6, 
-    .ind-images .img7, .ind-images .img8, .ind-images .img9, 
-    .ind-images .img10 {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 160px; 
+
+    .ind-images p{
+        font-family: "Open Sans", sans-serif;
+        font-size: 17px;
+        font-weight: 600;
+        line-height: 28.9px;
+        color: rgb(75, 79, 88);
+        width: 10vw;
+        text-align: center;
+        padding-left: 30px;
+    }
+
+    .ind-images div {
         height: 200px;
+        border-radius: 15px;
         background-color: white;
         box-shadow: 0 12px 30px rgba(0, 0, 0, 0.1);
-        border-radius: 15px;
+        max-width: calc(100% - 939px);
+        width: 100%;
+    }
+
+    .ind-images img{
+        width: auto;
+        height: 10vh;
     }
 }
 
-@media (min-width: 1517px) {
+@media (min-width: 1707px) { /* 80% */
     .text {
+        margin-left: 170px;
+        max-width: 60vw;
+    }
+
+    .text h2{
+        font-family: Roboto, sans-serif;
+        font-size: 40px;
+        font-weight: 700;
+        line-height: 40px;
+        color: rgb(2, 15, 66);
+    }
+
+    .text p{
+        font-family: "Open Sans", sans-serif;
+        font-size: 17px;
+        font-weight: 400;
+        line-height: 28.9px;
+        color: rgb(75, 79, 88);
+    }
+
+    .ind-images {
+        width: 67vw;
+        margin-left: 157px;
+    }
+
+    .ind-images p{
+        font-family: "Open Sans", sans-serif;
+        font-size: 17px;
+        font-weight: 600;
+        line-height: 28.9px;
+        color: rgb(75, 79, 88);
+        width: 10vw;
+        text-align: center;
+        padding-left: 10px;
+    }
+
+    .ind-images div {
+        height: 200px;
+        border-radius: 15px;
+        background-color: white;
+        box-shadow: 0 12px 30px rgba(0, 0, 0, 0.1);
+        max-width: calc(100% - 944px);
+        width: 100%;
+    }
+
+    .ind-images img{
+        width: auto;
+        height: 10vh;
+    }
+}
+
+@media (min-width: 1821px) { /* 75% */
+    .text {
+        margin-left: 225px;
+    }
+
+    .ind-images {
+        width: 63vw;
+        margin-left: 218px;
+    }
+
+    .ind-images p{
+        font-family: "Open Sans", sans-serif;
+        font-size: 17px;
+        font-weight: 600;
+        line-height: 28.9px;
+        color: rgb(75, 79, 88);
+        width: 10vw;
+    }
+
+    .ind-images div {
+        height: 200px;
+        border-radius: 15px;
+        background-color: white;
+        box-shadow: 0 12px 30px rgba(0, 0, 0, 0.1);
+        max-width: calc(100% - 954px);
+        width: 100%;
+    }
+}
+
+@media (min-width: 2049px) { /* 67% */
+    .text {
+        margin-left: 360px;
+    }
+
+    .text h2{
+        font-family: 'Roboto', sans-serif;
+        font-size: 40px;
+        font-weight: 700;
+        line-height: 40px;
+        color: rgb(2, 15, 66);
+    }
+
+    .ind-images {
+        width: 56vw;
         margin-left: 350px;
-        margin-right: 400px;
-    }
-    .ind-images {
-        width: 75%;
-        gap: 25px;        
-        margin-left: 240px;
-        margin-right: 700px;
-        width: 60vw;
-    }
-    .ind-images .img1, .ind-images .img2, .ind-images .img3, 
-    .ind-images .img4, .ind-images .img5, .ind-images .img6, 
-    .ind-images .img7, .ind-images .img8, .ind-images .img9, 
-    .ind-images .img10 {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: 200px;
-        background-color: white;
-        box-shadow: 0 12px 30px rgba(0, 0, 0, 0.1);
-        border-radius: 15px;
-        max-width: calc(100% - 1029px);
-        width: 100%;
-    }
-}
-
-@media (min-width: 1821px) {
-    .text {
-        margin-left: 240px;
-        text-align: left;
     }
 
-    .ind-images {
-        width: 75vw;
-        margin-left: 45px;
+    .ind-images p{
+        font-family: "Open Sans", sans-serif;
+        font-size: 17px;
+        font-weight: 600;
+        line-height: 28.9px;
+        color: rgb(75, 79, 88);
+        width: 6vw;
+        text-align: center;
+        padding-left: 40px;
+        margin-top: 10px;
     }
 
-    .ind-images .img1, .ind-images .img2, .ind-images .img3, 
-    .ind-images .img4, .ind-images .img5, .ind-images .img6, 
-    .ind-images .img7, .ind-images .img8, .ind-images .img9, 
-    .ind-images .img10 {
-        height: 200px;
+    .ind-images div {
+        height: 230px;
         border-radius: 15px;
         background-color: white;
         box-shadow: 0 12px 30px rgba(0, 0, 0, 0.1);
-        max-width: calc(100% - 1159px);
+        max-width: calc(100% - 944px);
         width: 100%;
+    }
+
+    .ind-images img{
+        width: auto;
+        height: 10vh;
     }
 }
